# nexcore-faers-etl

./: CLAUDE.md  Cargo.toml  README.md
src/: analytics.rs  api.rs  dedup.rs  grounding.rs  lib.rs  main.rs  ndc.rs  spatial_bridge.rs  store.rs  types.rs
tests/: faers_2025q4_real_data.rs  validate_parquet_output.rs
